fix: fix about us section visibility on >991px screens

--- a/moon.agency/user/themes/moon/css/main.css
+++ b/moon.agency/user/themes/moon/css/main.css
@@ -4431,17 +4431,17 @@ section .intro_section .slide_description_wrapper {
     text-align: left;
 }
 
-.slide_description.overlay {
-    background: rgb(0, 0, 0, 60%);
-    color: white;
-    padding: 2rem 4rem;
-    border-radius: 6px;
-}
-
 @media (min-width: 992px) {
     .intro_section .slide_description {
         max-width: 50%;
         text-align: left;
+    }
+
+    .slide_description.overlay {
+        background: rgb(0, 0, 0, 60%);
+        color: white;
+        padding: 2rem 4rem;
+        border-radius: 6px;
     }
 }
 
@@ -4515,7 +4515,7 @@ section .intro_section .slide_description_wrapper {
 
     .intro_section .slide_description {
         display: block;
-        padding: 20px 20px 80px;
+        padding: 80px 20px;
     }
 
     .intro_section .slide_description_wrapper {
